--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="view" id="player">
 			<video width="100%" height="100%" controls>
-  				<source src="video/videoA.mp4" type="video/mp4">
+  				<source src="video/song1-seatA.avi" type="video/avi">
 			</video>
 		</div>
 
